[package]
name = "named-block"
version = "0.3.1"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

description = "Macro implementing early-exit-from-any-block"
categories = ["rust-patterns"]
homepage = "https://github.com/durka/named-block"
repository = "https://github.com/durka/named-block"
readme = "README.md"
license = "MIT"
keywords = ["catch", "label", "block", "macro"]

[dependencies]
static-cond = { version = "0.1", optional = true }

[dev-dependencies]
static-cond = "0.1"

[features]
"nightly" = ["static-cond"]
